<resources>
    <string name="app_name">BloodborneCatalogue</string>
    <string name="action_settings">Settings</string>
    <string name="title_one">Bloodborne</string>
    <string name="title_two">NPC Catalogue</string>
    <string name="NPC_list_select">NPC\'s</string>
    <string name="enemies_list_select">Enemies</string>
    <string name="boss_list_select">Bosses</string>
    <string name="app_references"><u>References</u></string>
    <string name="title_activity_npc_list">NPC\'s</string>
    <string name="title_activity_enemies_list">Enemies</string>
    <string name="title_activity_boss_list">Bosses</string>
    <string name="title_activity_npc__article_">NPC Article</string>
    <string name="article_description">Description</string>
    <string name="article_lore">Lore</string>
    <string name="article_loot">Loot</string>
    <string name="article_fight_strategy">Strategy</string>
    <string name="article_text">#</string>
    <string name="image_description">Image Description</string>
    <string name="reference_special_thanks">Though I have many, many hours put into this app, this
    app would nt be possible without these resources available for research:</string>
</resources>
